@@ -46,6 +46,7 @@ DEFINE_LANGUAGE_CODE3 ("Austronesian (Other)", map, map)
 DEFINE_LANGUAGE_CODE ("Avaric", av, ava, ava)
 DEFINE_LANGUAGE_CODE ("Avestan", ae, ave, ave)
 DEFINE_LANGUAGE_CODE3 ("Awadhi", awa, awa)
+DEFINE_LANGUAGE_CODE ("Aymara, Southern", ay, ayc, ayc)
 DEFINE_LANGUAGE_CODE ("Aymara", ay, aym, aym)
 DEFINE_LANGUAGE_CODE ("Azerbaijani", az, aze, aze)
 DEFINE_LANGUAGE_CODE3 ("Balinese", ban, ban)
