@@ -1,3 +1,13 @@
+2013-09-28  Mike Frysinger  <vapier@gentoo.org>
+
+	* sysdeps/unix/sysv/linux/tst-fanotify.c (do_test): Fix style.
+
+2013-09-28  P. J. McDermott  <pj@pehjota.net>
+
+	* sysdeps/unix/Makefile ($(objpfx)stub-syscalls.c): Don't use
+	${Bash-specific parameter/pattern/string} parameter expansion.
+	* sysdeps/unix/make-syscalls.sh: Likewise.
+
 2013-09-27  Kaz Kojima  <kkojima@rr.iij4u.or.jp>
 
 	* sysdeps/sh/stackguard-macros.h: New file.
